--- a/.github/workflows/update_site.yml
+++ b/.github/workflows/update_site.yml
@@ -9,6 +9,7 @@ permissions:
 
 jobs:
   build_and_deploy:
+    name: 'Build and deploy'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
