Create language server crate and code plugin
Language server buffer type is copied from another project of mine. It
currently contains some redundant code.

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 /site/h10_bg.wasm
 /site/h10_bg.wat
 /site/h10.js
+/editors/code/node_modules
+/editors/code/package-lock.json
+/editors/code/*.vsix
