Move lexer to its own package, to allow using in the language server

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
-    "crates/h10", "crates/h10_language_server",
+    "crates/h10", "crates/h10_language_server", "crates/h10_lexer",
 ]
 
 [profile.dev.package.lexgen]
