--- a/crates/h10/Cargo.toml
+++ b/crates/h10/Cargo.toml
@@ -14,9 +14,10 @@ name = "h10"
 path = "bin/h10.rs"
 
 [dependencies]
+h10_lexer = { path = "../h10_lexer" }
+
 console_error_panic_hook = "0.1.7"
 lazy_static = "1.4.0"
-lexgen = "0.15"
 lexgen_util = "0.15"
 rpds = "0.13"
 rustc-hash = "1.1"
