--- a/crates/h10_language_server/Cargo.toml
+++ b/crates/h10_language_server/Cargo.toml
@@ -1,9 +1,14 @@
 [package]
 name = "h10_language_server"
 version = "0.1.0"
+authors = ["Ömer Sinan Ağacan <omeragacan@gmail.com>"]
+repository = "https://github.com/osa1/h10"
+license = "MIT"
 edition = "2021"
 
 [dependencies]
+h10_lexer = { path = "../h10_lexer" }
+
 dirs = "5.0.1"
 serde_json = "1.0.108"
 tokio = { version = "1.35.1", features = ["rt", "io-std", "rt-multi-thread"] }
