--- a/crates/h10_language_server/Cargo.toml
+++ b/crates/h10_language_server/Cargo.toml
@@ -10,6 +10,7 @@ edition = "2021"
 h10_lexer = { path = "../h10_lexer" }
 
 dirs = "5.0.1"
+lexgen_util = "0.15"
 serde_json = "1.0.108"
 tokio = { version = "1.35.1", features = ["rt", "io-std", "rt-multi-thread"] }
 tower-lsp = "0.20.0"
