--- a/crates/h10/Cargo.toml
+++ b/crates/h10/Cargo.toml
@@ -15,6 +15,7 @@ path = "bin/h10.rs"
 
 [dependencies]
 h10_lexer = { path = "../h10_lexer" }
+rc_id = { path = "../rc_id" }
 
 console_error_panic_hook = "0.1.7"
 lazy_static = "1.4.0"
