Start generating outline in the language server

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
 members = [
+    "crates/arc_id",
     "crates/h10",
     "crates/h10_language_server",
     "crates/h10_lexer",
