--- a/crates/h10/Cargo.toml
+++ b/crates/h10/Cargo.toml
@@ -14,6 +14,7 @@ name = "h10"
 path = "bin/h10.rs"
 
 [dependencies]
+arc_id = { path = "../arc_id" }
 h10_lexer = { path = "../h10_lexer" }
 rc_id = { path = "../rc_id" }
 
