--- a/crates/h10_language_server/Cargo.toml
+++ b/crates/h10_language_server/Cargo.toml
@@ -7,6 +7,7 @@ license = "MIT"
 edition = "2021"
 
 [dependencies]
+h10 = { path = "../h10" }
 h10_lexer = { path = "../h10_lexer" }
 
 dirs = "5.0.1"
